<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <EditText
        android:id="@+id/webdav_url_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_webdav_url"
        android:inputType="textUri"
        android:maxLines="1"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/webdav_username_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_webdav_username"
        android:inputType="textCapWords|textNoSuggestions"
        android:maxLines="1"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/webdav_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_webdav_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/webdav_hint_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/message_webdav_app_password"
        android:textSize="12sp" />

</LinearLayout>

